# mazette

./: README.md  assets.py  mazette.py  pyproject.toml
