[project]
name = "mazette"
version = "0.2.0"
description = "GitHub asset management with lock files and extensive configuration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
 "colorama>=0.4.6",
 "platformdirs>=4.3.8",
 "requests>=2.32.3",
 "semver>=3.0.4",
 "toml>=0.10.2",
]

[project.scripts]
mazette = "mazette:main"
